Move plugin auth into OpenAPI specs
